--- a/src/components/modalToSendMessage/ModalToSendMessage.module.css
+++ b/src/components/modalToSendMessage/ModalToSendMessage.module.css
@@ -1,24 +1,20 @@
-.toSendrapper {
+.toSendWrapper {
+    padding: 0;
+    margin: 0;
     position: fixed;
     display: flex;
-    width: 99%;
-    height: 99vh;
+    width: 100dvw;
+    height: 100dvh;
     top: 0;
     left: 0;
     z-index: 99999;
-
 }
 
 .toSendBlock{
     position: relative;
     width: 100%;
     height: 100%;
-    top: calc(1vh / 2);
-    left: calc(1% / 2);
-    background: #fff;
-    border-radius: 4px;
     border-radius: 6px;
-    overflow: auto;
     background-color: #ECECEC;
 }
 
@@ -41,6 +37,7 @@
     height: 17px;
     width: 1px;
     background-color: #333;
+    cursor: pointer;
   }
 .toSendExit:before {
   transform: rotate(45deg);
@@ -52,19 +49,19 @@
 form {
     display: flex;
     flex-direction: column;
-    align-items: baseline;
-    justify-content: baseline;
 }
 
 .toSendInputTheme, .toSendInputText {
+    padding: 0 13px;
     font-family: "Forum", serif;
     text-align: justify;
     border: none;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #D9D9D9;
     background-color: #ECECEC;
     margin-bottom: 20px;
     width: 99%;
     resize: none;
+    outline: none;
 }
 
 .toSendInputTheme {
@@ -76,21 +73,17 @@ form {
     margin: 0;
 }
 
-.toSendAttach, .toSendSend {
-    height: 25px;
-    width: 25px;
-}
-
 .choseImageDiv{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .choseImage{
     width: 5vh;
     height: 5vh;
     margin: 11px 20px 7px 13px;
+    object-fit: cover;
 }
 
 .choseImageName{
@@ -98,42 +91,41 @@ form {
 }
 
 .toSendButAttach, .toSendButSend {
-    position: absolute;
     cursor: pointer;
+    width: 100%;
+    height: 100%;
+    position: absolute;
     opacity: 0;
-    width: 40px;
-    height: 40px;
+    top: 0;
+    left: 0;
 }
 
 .toSendSendImage {
-    position: absolute;
     height: 32px;
     width: 32px;
 }
 
+.toSendAttach, .toSendSend {
+    cursor: pointer;
+    position: relative;
+    height: 25px;
+    width: 25px;
+}
+
 .toSendAttachImage{
-    position: absolute;
-    height: 21px;
-    width: 21px;
-}
-
-.toSendFormMain{
-    min-height: 100%;
-    margin-bottom: -80px;
+    pointer-events: none;
+    height: 100%;
+    width: 20px;
 }
 
 .toSendButton{
-    height: 40px;
-}
-
-body{
-   height: 100%;
-}
-
-.toSendButton{
-    margin-top: 40px;
+    border-top: 1px solid #D9D9D9;
+    width: calc(100% - 26px);
+    padding: 10px 13px;
+    position: fixed;
     display: flex;
-    align-items: center;
-    flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    bottom: 0;
+    left: 0;
 }
