Fixed: create post route and empty comment send, Feature: added swiper at post card and create post with multy images

--- a/src/components/postCard/PostCard.module.css
+++ b/src/components/postCard/PostCard.module.css
@@ -56,16 +56,16 @@
 }
 
 .blockPictures {
-    align-self: center;
     margin-bottom: 10px;
 }
 
-.blockPictures img {
-    display: flex;
-    max-width: 100%;
+.postImage {
+    width: 100%;
+    max-width: 500px;
     height: auto;
+    max-height: 600px;
     border-radius: 6px;
-    max-height: 300px;
+    object-fit: cover;
 }
 
 .likeCommentBlock {
