--- a/src/components/newPostModal/NewPostModal.module.css
+++ b/src/components/newPostModal/NewPostModal.module.css
@@ -1,6 +1,6 @@
 .modalWrapper {
-    width: 100%;
-    height: 100%;
+    width: 100dvw;
+    height: 100dvh;
     background-color: white;
     position: fixed;
     display: flex;
@@ -50,14 +50,18 @@
 }
 
 .imageWrapper {
+    flex-wrap: wrap;
+    display: flex;
     padding: 0 12px;
+    gap: 10px;
 }
 
 .choseImage {
     border-width: 0;
     border-style: none;
     border-color: transparent;
-    width: 126px;
+    width: 100%;
+    max-width: 126px;
     height: 162px;
     border-radius: 6px;
     background-color: var(--tertiary-color);
